[package]
name = "norgmill"
version = "0.1.0"
edition = "2021"
default-run = "norgmill"

[dependencies]
axum = { version = "0.7.5", features = ["tracing", "tower-log"] }
clap = { version = "4.5.17", features = ["derive"] }
const_format = "0.2.34"
dashmap = "6.1.0"
dotenv = { version = "0.15.0", features = ["clap"] }
http = "1.1.0"
miette = { version = "7.2.0", features = ["fancy"] }
norg = { path = "../rust-norg/", version = "0.1.0", package = "rust-norg"}
shellexpand = "3.1.0"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["catch-panic", "fs", "metrics", "set-header", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["tracing", "chrono", "env-filter", "json", "serde", "serde_json"] }

[dev-dependencies]
test-log = { version = "0.2.18", features = ["trace"] }
